# finalproject_bazhenov_M25-555

./: .gitignore  README.md  main.py  portfolios.json  pyproject.toml  users.json
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  decorators.py  exceptions.py  logging_config.py  models.py  settings.py  usecases.py
valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
